welcome.lessons.welcome.loopwhile.LoopWhile.scala.error
Program:1: error: reassignment to val
while (estFaceMur=false) {
                 ^